--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,119 @@
-Paste Your appstate here
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261562358081565%22%3A%22u28n7ixH%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.338Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    },
+    {
+        "key": "datr",
+        "value": "lAaEZt0TVxfTKshqItr-F2zR",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.339Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    },
+    {
+        "key": "sb",
+        "value": "lAaEZk7CM_2dVYqO3a3fxuCc",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.339Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.339Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.339Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    },
+    {
+        "key": "wd",
+        "value": "423x784",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.339Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61562358081565",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.339Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    },
+    {
+        "key": "xs",
+        "value": "38%3A8ii04j6t__0pWA%3A2%3A1740195250%3A-1%3A12752",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.339Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    },
+    {
+        "key": "fr",
+        "value": "0TTxXNyWBLeFAb9rc.AWU0QzwHwBeZVjbka-QdeMRTnFCgbux7NXvexA.BnrdL_..AAA.0.0.BnuUW0.AWWbacvZXZs",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.339Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.339Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B688x360x2.5506443977355957",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.339Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101627390%3BT%3A29003891",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.339Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2747%3Btimestamp%3A1740233510",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-22T14:11:55.339Z",
+        "lastAccessed": "2025-02-22T14:11:55.339Z"
+    }
+]
